# pyDiscRip

./: README.md  TODO.MD  discrip.py  pyproject.toml
config/: hp.lif.1651b.json  hp.lif.33dd.json  hp.lif.77dd.json  hp.lif.77hd.json  ibm.1200.json  ibm.3740.json  ibm.720.json  jonos.35.json  mac.400.json  sord.m23.35.json
config/handler/flux/: diskdefs.cfg
handler/: handler.py  mediareader.py
handler/controller/: AutoPublisherLS.py  DiscRobotGeneric.py  RoboRacerLS.py  controller_handler.py  gw.py  manager.py
handler/data/: bincue.py  bincue_split.py  data_handler.py  flux.py  hxc_image.py  iso9660.py  manager.py  wav.py
handler/media/: bd_redumper.py  cd.py  cd_redumper.py  ddisk.py  dummy.py  dvd.py  dvd_redumper.py  floppy.py  manager.py  media_handler.py  optical.py
handler/util/: bincon.py
web/: web.py
web/http/: home.html
web/http/rip/: index.html
web/http/static/: jsonForm.js  script.js  status-drives.css  status-drives.html  status-drives.js  status-queue.js  status-view.css  status-view.js  status.html  style.css
